# docs/swagger.json
@@ -9,6 +9,45 @@
     "host": "127.0.0.1:8080",
     "basePath": "/api/",
     "paths": {
+        "/auth/forgot-password": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "ForgotPassword",
+                "parameters": [
+                    {
+                        "description": "Forgot Password",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CodeDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/refresh-token": {
             "post": {
                 "consumes": [
@@ -56,7 +95,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.SendCodeDTO"
+                            "$ref": "#/definitions/dto.CodeDTO"
                         }
                     }
                 ],
@@ -491,7 +530,7 @@
         }
     },
     "definitions": {
-        "dto.SendCodeDTO": {
+        "dto.CodeDTO": {
             "type": "object",
             "required": [
                 "email"
